[package]
name = "drag-move-rs"
version = "0.1.0"
authors = ["Alexandru Paul Csiki <paulcsiki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
glium = { version = "0.27", default-features = true }
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-rs = "1.47.0"